fixing issue with buttons on Safari Mobile

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -46,7 +46,7 @@
 
 input {
 	-webkit-appearance: none;
-    border-radius: 0;
+    -webkit-border-radius: 0;
 }
 
 #map_canvas {
